fixed the alignment of project section

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,19 @@
 .img-project {
-  width: 100%;
-
+  width: 350px;
+  height: 200px;
   border-radius: 5px;
-  position: relative;
+
   margin: auto;
 }
 
-header {
-  position: relative;
+button {
+  width: 30%;
 }
 
 .projects-wrapper {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+
   padding: 0 10% 0% 10%;
   margin: 40px auto 60px;
 }
@@ -21,17 +22,18 @@ article {
   border: solid 1px grey;
   border-radius: 5px;
   margin: 5%;
-  position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .project-description {
   padding: 10%;
 }
 
-ul {
+/* ul {
   margin: 20px auto 20px auto;
   list-style-type: none;
-}
+} */
 
 .middle-container {
   padding-top: 80px;
